--- a/app/src/main/res/layout/activity_getstarted.xml
+++ b/app/src/main/res/layout/activity_getstarted.xml
@@ -46,4 +46,23 @@
         app:layout_constraintTop_toBottomOf="@+id/helloUser_txt"
         tools:ignore="TouchTargetSizeCheck" />
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/container_frame"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/navigation_view_bottom"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:itemBackground="@color/colorPrimaryDark"
+        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/black"
+        app:menu="@menu/navi_menu"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
